[metadata]
name = tempest-tool
summary = A tool to check for tempest failures in the log files
description-file =
    README.md
author = Arx Cruz and Sagi Shnaidman
author-email = arxcruz@redhat.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    tempestmail = tempestmail.cmd.tempestmailcmd:main
    tempestmaild = tempestmail.cmd.tempest_maild:main
